fix: ensure text remains visible during webfont load

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,9 +5,11 @@
 @font-face {
     font-family: "American Typewriter";
     src: url("../public/fonts/American Typewriter Bold.ttf");
+    font-display: swap;
 }
 
 @font-face {
     font-family: "Mulish";
     src: url("../public/fonts/Mulish-Regular.ttf");
+    font-display: swap;
 }
